// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can filter by an exact package name 1`] = `
"Checking for outdated dependencies
--- PROGRESS ---
--- SEPARATOR ---
INFO: Package     Current   Latest   Package Type
INFO: package-a   1.0.0     1.1.0    dependencies
--- SEPARATOR ---
WARN: 1 dependency is out of date
"
`;

exports[`can filter using a wildcard 1`] = `
"Checking for outdated dependencies
--- PROGRESS ---
--- SEPARATOR ---
INFO: Package                 Current   Latest   Package Type
INFO: @test-scope/package-a   0.0.1     1.0.0    dependencies
INFO: @test-scope/package-b   1.1.0     2.0.0    dependencies
--- SEPARATOR ---
WARN: 2 dependencies are out of date
"
`;
